<resources>
    <string name="app_name">To do list</string>
    <string name="tarefas">Tarefas</string>
    <string name="t_tulo">Título</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="nova_tafera">Nova Tafera</string>
    <string name="passear_com_o_cachorro">Passear com o Cachorro</string>
    <string name="editar">Editar</string>
    <string name="ops_voc_n_o_tem_nenhuma_tarefa">Ops! você não possui\n nenhuma tarefa</string>
</resources>